# duckdb-fts

./: .gitignore  CMakeLists.txt  README.md  extension_config.cmake
.github/: duckdb-version
.github/regression/: fts_autocomplete.csv  fts_autocomplete_haystack.csv  fts_boolean.csv  fts_boolean_haystack.csv  fts_field_scoring.csv  fts_field_scoring_haystack.csv  fts_layered.csv  fts_layered_haystack.csv
.github/workflows/: MainDistributionPipeline.yml  Regression.yml
benchmark/fts/layered_autocomplete/haystack/: autocomplete_2char.benchmark  autocomplete_3char.benchmark  autocomplete_long.benchmark  base_match.benchmark  boolean_flat.benchmark  boolean_leaf.benchmark  boolean_match.benchmark  boolean_min_should_match.benchmark  boolean_must_not.benchmark  boolean_nested.benchmark  field_best_fields.benchmark  field_bm25f.benchmark  field_bm25f_normalization.benchmark  field_weighted_sum.benchmark  incremental_delete.benchmark  incremental_insert.benchmark  index_create.benchmark  layered_exact.benchmark  layered_fuzzy.benchmark  layered_match.benchmark  layered_mixed.benchmark  layered_prefix.benchmark  layered_substring.benchmark
benchmark/fts/layered_autocomplete/smoke/: autocomplete_2char.benchmark  autocomplete_3char.benchmark  autocomplete_long.benchmark  base_match.benchmark  boolean_deep.benchmark  boolean_flat.benchmark  boolean_leaf.benchmark  boolean_match.benchmark  boolean_min_should_match.benchmark  boolean_must_not.benchmark  boolean_nested.benchmark  boolean_wide.benchmark  field_best_fields.benchmark  field_bm25f.benchmark  field_bm25f_normalization.benchmark  field_weighted_sum.benchmark  incremental_delete.benchmark  incremental_insert.benchmark  index_create.benchmark  layered_exact.benchmark  layered_fuzzy.benchmark  layered_match.benchmark  layered_mixed.benchmark  layered_prefix.benchmark  layered_substring.benchmark
benchmark/fts/layered_autocomplete/templates/: autocomplete_query.benchmark.in  boolean_match.benchmark.in  boolean_query.benchmark.in  field_scoring.benchmark.in  incremental_delete.benchmark.in  incremental_insert.benchmark.in  index_create.benchmark.in  layered_match.benchmark.in  layered_query.benchmark.in
cmake/: GenerateFTSSQLAssets.cmake
extension/fts/: fts_config.py  fts_extension.cpp  fts_indexing.cpp
src/: fts_config.py  fts_extension.cpp  fts_index_builder.cpp  fts_index_common.cpp  fts_index_maintenance.cpp  fts_indexing.cpp  fts_sql_template.cpp
src/include/: fts_extension.hpp  fts_index_builder.hpp  fts_index_common.hpp  fts_index_maintenance.hpp  fts_indexing.hpp  fts_sql_template.hpp
src/sql/: README.md
src/sql/index/: build_raw_dict.sql  english_stopwords.sql  import_stopwords.sql  index_tables.sql  layered_sidecars.sql  raw_dict_table.sql  schema_setup.sql  tokenize_field.sql  tokenize_macro.sql
src/sql/maintenance/: clustered_delete_triggers.sql  clustered_incremental_index_setup.sql  clustered_insert_token_ctes.sql  clustered_insert_triggers.sql  delete_token_ctes.sql  delete_triggers.sql  incremental_index_setup.sql  insert_docs_cte.sql  insert_token_docs_cte.sql  insert_triggers.sql  layered_affected_term_ids.sql  layered_delete_after_df.sql  layered_delete_before_terms.sql  layered_insert_df.sql  layered_insert_new_terms.sql  layered_insert_token_ctes.sql  stats_delta_update.sql  tokenize_deleted_field.sql  tokenize_inserted_field.sql
src/sql/query/: field_scoring_config_ctes.sql  field_scoring_score_ctes.sql  field_scoring_validation_ctes.sql  match_bm25.sql  match_layered_bm25.sql  match_layered_bm25_query.sql  search_layered_bm25.sql  search_layered_bm25_query.sql
test/sql/fts/: delimiter.test  issue_13866.test  test_boolean_query.test  test_field_scoring.test  test_fts_attach.test  test_identifier_quoting.test  test_incremental_clustered_terms.test  test_incremental_dict_df_delta.test  test_incremental_insert.test  test_incremental_insert_edge_cases.test  test_incremental_insert_old_storage.test  test_indexing.test_slow  test_indexing_and_schema.test  test_layered_search.test  test_opensearch_standard_tokenizer.test
